Status restrictions for deletion of itineraries and itinerary jobs
